updated tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g status-bg default
 set -g status-fg white
 set -g status-attr bright
 set -g status-left ""
-set -g status-right "#[fg=cyan]#H"
+set -g status-right "#[fg=cyan]#h"
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-bg red
 set-window-option -g window-status-current-attr dim
@@ -22,6 +22,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+
 setw -g mode-mouse off
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
@@ -29,3 +34,6 @@ set -g mouse-select-window off
 
 bind-key a send-prefix
 setw -g aggressive-resize on
+
+set -s escape-time 1
+bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded"
